Fixed footer alignement responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,14 +29,22 @@ a {
 }
 
 /* -------------HEADER------------------------------------ */
+header {
+    background: #ece7e1;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+}
 nav {
     display: flex;
     height: 140px;
     width: 100%;
-    background: #ece7e1;
+    max-width: 1000px;
     align-items: center;
     justify-content: space-between;
     padding: 0 100px 0 100px;
+    margin: 0 auto;
     flex-wrap: wrap;
 }
 
@@ -115,16 +123,8 @@ input[type="checkbox"] {
     padding: 1em;
 }
 
-/* .intro-text-area{
-    display: flex;
-    flex-direction: column;
-} */
-/* .intro-mob-hidden-img {
-    /* display: none !important; */
-/* display: none; */
-}
 
-*/ .landing-p-msg {
+.landing-p-msg {
     text-align: justify !important;
     text-justify: inter-word;
 }
@@ -281,23 +281,32 @@ input[type="checkbox"] {
 /* -------------card section------------------------------------ */
 
 /* -------------FOOTER------------------------------------ */
+footer {
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+    padding-bottom:1em;
+}
 .footer-container {
-    background-color: #552f1e;
-    color: #ece7e1;
-    margin-top: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-content: center;
     height: auto;
     width: 100%;
-    /* padding: 0 100px 0 100px; */
-    padding: 0 30px;
-    margin: 10px auto;
+    border: 1px solid red;
+}
+
+.footer-containt-box {
+    justify-content: space-between;
+    align-content: center;
+    max-width: 1000px;
+    width: 100%;
 }
 
 .foo-border {
-    border: 1px solid transparent;
+    width: 100%;
 }
 
 .rev-bg {
@@ -307,7 +316,7 @@ input[type="checkbox"] {
 
 .foo-hd-text {
     text-transform: uppercase;
-    border-bottom: 1px solid rgba(255, 255, 255, .2);
+    /* border-bottom: 1px solid rgba(255, 255, 255, .2); */
     margin-top: 1em;
 }
 
@@ -320,6 +329,7 @@ input[type="checkbox"] {
 .address-link {
     text-decoration: none;
     color: inherit;
+    /* border-bottom: 1px solid rgba(255, 255, 255, .2); */
 }
 
 .address-link:hover {
@@ -365,20 +375,20 @@ label {
 
 } */
 @media (min-width: 768px) and (max-width: 991px) {
-    .container {
+    /* .container {
         max-width: 768px;
         width: 100%;
         min-height: 100%;
         padding: 0 40px;
         margin: 10px auto;
-    }
+    } */
 
-    .card {
+    /* .card {
         font-size: 16px;
-    }
+    } */
 
     /* FOOTER  */
-    .footer-container {
+    /* .footer-container {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
@@ -386,12 +396,12 @@ label {
         align-content: center;
         padding: 0 100px;
         margin: 10px auto;
-    }
+    } */
 
-    .foo-hd-text {
+    /* .foo-hd-text {
         border-bottom: 1px solid transparent;
         margin: 0 10px;
-    }
+    } */
 
 }
 
@@ -444,18 +454,29 @@ label {
         padding: 0;
         gap: 5px;
     }
-
-    .footer-container {
+    /* ------FOOTER------ */
+    .footer {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: space-between;
-        padding: 0 100px;
-        /* margin: 10px auto; */
-        margin: 10px auto 0 auto;
+        width: 100%;
+    }
+    .footer-containt-box {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+            }
+    .footer-container {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%
     }
     .foo-border {
-        /* max-width: 1000px; */
+        max-width: 1000px;
     }
 
     /* while in desktop view the tel link is disabled */
@@ -488,7 +509,6 @@ label {
         top: 130px;
         left: -100%;
         background: #ece7e1;
-        /* height: 100vh; */
         height: 370px;
         width: 100%;
         text-align: center;
@@ -532,15 +552,3 @@ label {
         animation-name: dissolve;
     }
 }
-
-/* @media(max-width: 320px) {
-    .grid {
-        padding-top: 10rem;
-    }
-}
-@media(max-width: 768px) {
-    .grid {
-        padding-top: 7rem;
-
-    }
-} */
